# DLMinorProject

./: .gitignore  Deep Learning WCE Classification Project — Overvie.md  README.md  What You Have to Do — Two Dataset Version.md  pyproject.toml
data/: README.md
notebooks/: wce_classification.ipynb
outputs/: README.md
src/: data_utils.py  evaluation.py  models.py  preprocessing.py  sampling.py  training.py
